tests/expectations/compiler/function/too_many_transitions_fail.out
Error [ETYC0372047]: The number of entry points exceeds the maximum. snarkVM allows up to 31 entry points within a single program.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
